# ai-platform

./: .gitignore  CMakeLists.txt
app/: ai_conversation_app.cpp  cli.cpp  cli_deepseek.cpp  cli_openai.cpp  main.cpp  main_deepseek.cpp
examples/customization/: gesture_recognizer.ipynb
lib/: AIHandlerFactory.cpp  AIHandlerFactory.h  DebugUtils.h  DeepSeekHandler.cpp  DeepSeekHandler.h  IApiHandler.h  OpenAIHandler.cpp  OpenAIHandler.h  SessionManager.cpp  SessionManager.h
